# simple-poker-cfr

./: .gitignore  CMakeLists.txt  README.md  evaluation.md
src/: action.h  deck.cpp  deck.h  game_over_utils.h  information_set.h  main.cpp  node.cpp  node.h  rules.md  trainer.cpp  trainer.h
src/kuhn/: constants.h  kuhn_trainer.cpp  kuhn_trainer.h  node.cpp  node.h
src/simple_poker/: constants.h  deck.cpp  deck.h  game_over_utils.cpp  game_over_utils.h  information_set.cpp  information_set.h  node.cpp  node.h  trainer.cpp  trainer.h
src/simple_poker/simulation/: cli_player.cpp  cli_player.h  random_bot.cpp  random_bot.h  simple_player.h  simulate.cpp  simulate.h
src/simulation/: cfr_bot.cpp  cfr_bot.h  cli_player.h  player.h  random_bot.h  simple_player.h  simulate.cpp  simulate.h
